--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,24 @@
 {
+  "exclude": [
+    "./webpack.config.js",
+    "./webpack.config.ext.js",
+    "dist",
+  ],
 	"compilerOptions": {
-		"module": "commonjs",
-		"target": "ES2020",
+    "target": "ES2020",
+    "module": "CommonJS",
+    "lib": ["dom", "ES2020"],
     "outDir": "dist",
-		"lib": [
-			"ES2020"
-		],
+    "moduleResolution": "node",
+    "allowJs": true,
+    "jsx": "react",
 		"sourceMap": true,
 		"rootDir": "src",
-		"strict": true   /* enable all strict type-checking options */
-		/* Additional Checks */
-		// "noImplicitReturns": true, /* Report error when not all code paths in function return a value. */
-		// "noFallthroughCasesInSwitch": true, /* Report errors for fallthrough cases in switch statement. */
-		// "noUnusedParameters": true,  /* Report errors on unused parameters. */
+    "esModuleInterop": true,
+    "noImplicitReturns": false,
+    "noImplicitThis": true,
+    "noImplicitAny": false,
+    "strictNullChecks": false,
+		"strict": false,
 	}
 }
