--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,13 +5,13 @@
     "dist",
   ],
 	"compilerOptions": {
-    "target": "ES2020",
-    "module": "CommonJS",
-    "lib": ["dom", "ES2020"],
+    "target": "es6",
+		"module": "commonjs",
+    "lib": ["dom", "es6"],
     "outDir": "dist",
     "moduleResolution": "node",
     "allowJs": true,
-    "jsx": "react",
+    "jsx": "react-jsx",
 		"sourceMap": true,
 		"rootDir": "src",
     "esModuleInterop": true,
