--- a/package.json
+++ b/package.json
@@ -129,6 +129,7 @@
     "@preact/signals-core": "^1.2.2",
     "@preact/signals-react": "^1.2.1",
     "@primer/octicons-react": "^17.9.0",
+    "@rollbar/react": "^0.11.1",
     "@stitches/react": "^1.2.8",
     "@vscode/webview-ui-toolkit": "^1.1.0",
     "dotenv": "^16.0.3",
@@ -139,6 +140,7 @@
     "pluralize": "^8.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "rollbar": "^2.26.1",
     "stream-http": "^3.2.0",
     "url": "^0.11.0",
     "use-async-effect": "^2.2.7",
