Add production build scripts

--- a/package.json
+++ b/package.json
@@ -87,15 +87,18 @@
     ]
   },
   "scripts": {
+    "build:prod:app": "webpack --env entry=app --config webpack.config.js --mode production",
+    "build:prod:ext": "webpack --env entry=extension --config webpack.config.js --mode production",
     "build:dev:app": "webpack --env entry=app --config webpack.config.js --mode development",
     "build:dev:ext": "webpack --env entry=extension --config webpack.config.js --mode development",
     "build:dev": "yarn run build:dev:ext & yarn run build:dev:app",
+    "build:prod": "yarn run build:prod:ext & yarn run build:prod:app",
     "watch:dev": "yarn run build:dev:ext --watch & yarn run build:dev:app --watch",
     "pretest": "yarn run build && yarn run lint",
     "lint": "eslint src --ext ts",
     "clean": "rimraf dist",
     "dev": "code --extensionDevelopmentPath=${PWD}",
-    "vscode:prepublish": "yarn build:dev",
+    "vscode:prepublish": "yarn build:prod",
     "vscode:package": "yarn vsce package -o dist/ping.vsix --yarn",
     "vscode:publish": "yarn vsce publish -i dist/ping.vsix --yarn",
     "vscode:release": "yarn vscode:package && yarn vscode:publish",
